# tbc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build.yml
src/: main.rs
src/core/: console.rs  mod.rs
src/core/network/: client.rs  host.rs  mod.rs
src/enums/: message.rs  mod.rs  mode.rs
src/errors/: certificate_error.rs  mod.rs  network_error.rs
src/utils/: certificate.rs  ip_address.rs  mod.rs
tests/: certificate_test.rs
