[package]
name = "tbc"
version = "0.2.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
bincode = "2.0.1"
hmac = "0.12.1"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
text_io = "0.1.13"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
